examples/test/testpolicy7554.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7554
  namespace: namespace156
spec:
  podSelector:
    matchLabels:
      key49: value1
      key4: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value18
      podSelector:
        matchLabels:
          key24: value1
          key0: value10
          key22: value35
